--- a/src/server/website/css/Usuario.css
+++ b/src/server/website/css/Usuario.css
@@ -10,7 +10,7 @@ body{
 }
 .form-usuario {
   width: 400px;
-  height: 420px;
+  height: auto;
   background: #4e4d4d;
   margin: auto;
   margin-top: 180px;
